prevent emoji from getting squished

--- a/src/plugins/channelTabs/style.css
+++ b/src/plugins/channelTabs/style.css
@@ -93,6 +93,7 @@
 .vc-channeltabs-emoji-container {
     height: 24px;
     width: 24px;
+    min-width: 24px;
     border-radius: 50%;
 }
 
